# Command_Centre

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: auth.py  db.py  main.py  seed.py
backend/app/models/: __init__.py  attachment.py  item.py  push.py  setting.py  space.py  status.py
backend/app/routers/: attachments.py  items.py  push.py  settings.py  spaces.py  statuses.py
backend/app/schemas/: __init__.py  item.py  space.py  status.py
backend/app/services/: push.py  scheduler.py  seed.py  settings_store.py
backend/tests/: test_api.py
docs/: DECISIONS.md  NAS_DEPLOY.md  NATIVE_BUILD.md
frontend/: .env.capacitor  .env.tauri  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: MicButton.tsx
frontend/src/components/ui/: context-menu.tsx
frontend/src/features/actions/: ActionMenu.tsx  (+5 more)
frontend/src/hooks/: use-media-query.ts
frontend/src/layouts/: DesktopLayout.tsx  MobileLayout.tsx  RightRail.tsx
frontend/src/lib/: api-types.ts  api.ts  color.ts  format.ts  push.ts  queries.ts  settings.tsx  sound.ts  speech.ts  status.ts  subtasks.ts  tree.ts  utils.ts
mcp/: README.md  command_center_mcp.py
scripts/: deploy-frontend.ps1  start-command-center.vbs  toggle-startup.vbs
(+31 files in other folders)
